--- a/FrontEnd/driverDashboard.html
+++ b/FrontEnd/driverDashboard.html
@@ -7,8 +7,7 @@
     <script src="https://kit.fontawesome.com/97dbc65e21.js" crossorigin="anonymous"></script>
 
 </head>
-<body>
-<!--navBar-->
+<div id="driverDashboard">
 <nav class="navbar shadow-sm navbar-expand-lg navbar-light bg-warning">
     <div class="container">
         <a class="navbar-brand" href="#"><img src="assets/images/LogoBlack.png" width="200" alt=""></a>
@@ -56,5 +55,5 @@
 
 <script src="assets/js/jquery-3.6.1.min.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
-</body>
+</div>
 </html>
